Fix following an image map link by pressing enter.  Bug 214373, r+sr=jst, a=asa.